// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-dAbbOL cDpbri"
  >
    <div
      class="sc-feUZmu hsPXbq"
    >
      <div
        class="sc-fUnMCh kdrlNb"
      >
        <div
          class="sc-bXCLTC sc-eeDRCY gfnkhb cauQgg"
        >
          ERROR
        </div>
        <h4
          class="sc-kOHTFB dSnpfW"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-hzhJZQ"
      >
        <pre
          class="sc-kOPcWz siqHk"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hmdomO dTIges"
      >
        <a
          class="sc-fHjqPf gBrkbJ"
        >
          <i
            class="sc-aXZVg eROwcF fa fa-play-circle-o"
            style="line-height: inherit;"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display a nested error for gql status codes 1`] = `
<div>
  <div
    class="sc-dAbbOL cDpbri"
  >
    <div
      class="sc-feUZmu hsPXbq"
    >
      <div
        class="sc-fUnMCh kdrlNb"
      >
        <div
          class="sc-bXCLTC sc-eeDRCY gfnkhb cauQgg"
        >
          ERROR
        </div>
        <h4
          class="sc-kOHTFB dSnpfW"
        >
          42N51: Syntax error or access rule violation - invalid parameter
        </h4>
      </div>
      <div
        class="sc-hzhJZQ"
      >
        <pre
          class="sc-kOPcWz siqHk"
          data-testid="cypherFrameErrorMessage"
        >
          Invalid parameter $\`param\`.
        </pre>
      </div>
      <div
        class="sc-dAbbOL iJKcfy"
      >
        <div
          class="sc-feUZmu hsPXbq"
        >
          <div
            class="sc-fUnMCh kdrlNb"
          >
            <h4
              class="sc-kOHTFB dSnpfW"
            >
              22G03: Data exception - invalid value type
            </h4>
          </div>
          <div
            class="sc-dAbbOL iJKcfy"
          >
            <div
              class="sc-feUZmu hsPXbq"
            >
              <div
                class="sc-fUnMCh kdrlNb"
              >
                <h4
                  class="sc-kOHTFB dSnpfW"
                >
                  22N27: Data exception - invalid entity type
                </h4>
              </div>
              <div
                class="sc-hzhJZQ"
              >
                <pre
                  class="sc-kOPcWz siqHk"
                  data-testid="cypherFrameErrorMessage"
                >
                  Invalid input '******' for $\`param\`. Expected to be STRING.
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error 1`] = `
<div>
  <div
    class="sc-dAbbOL cDpbri"
  >
    <div
      class="sc-feUZmu hsPXbq"
    >
      <div
        class="sc-fUnMCh kdrlNb"
      >
        <div
          class="sc-bXCLTC sc-eeDRCY gfnkhb cauQgg"
        >
          ERROR
        </div>
        <h4
          class="sc-kOHTFB dSnpfW"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-hzhJZQ"
      >
        <pre
          class="sc-kOPcWz siqHk"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error for gql status codes 1`] = `
<div>
  <div
    class="sc-dAbbOL cDpbri"
  >
    <div
      class="sc-feUZmu hsPXbq"
    >
      <div
        class="sc-fUnMCh kdrlNb"
      >
        <div
          class="sc-bXCLTC sc-eeDRCY gfnkhb cauQgg"
        >
          ERROR
        </div>
        <h4
          class="sc-kOHTFB dSnpfW"
        >
          22N14: Data exception - invalid temporal value combination
        </h4>
      </div>
      <div
        class="sc-hzhJZQ"
      >
        <pre
          class="sc-kOPcWz siqHk"
          data-testid="cypherFrameErrorMessage"
        >
          Cannot select both epochSeconds and 'datetime'.
        </pre>
      </div>
    </div>
  </div>
</div>
`;
